Add placeholder tab components with material elements
Add ESLint to verify each component

Bug: 193062584
Bug: 193436790
Bug: 193436791
Bug: 193436805
Change-Id: I8de80c5ba7bb36484c2861239abfc1850a583541

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,37 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 
-<p>
-  Interactive Canvas Extension
-</p>
+<mat-tab-group animationDuration="0ms" backgroundColor="primary">
+  <mat-tab>
+    <ng-template mat-tab-label>
+      <mat-icon>cloud_download</mat-icon>
+      <span>Send Data</span>
+    </ng-template>
+    <tab-update></tab-update>
+  </mat-tab>
+  
+  <mat-tab>
+    <ng-template mat-tab-label>
+      <mat-icon>reviews</mat-icon>
+      <span>TTS Mark</span>
+    </ng-template>
+    <tab-ttsmark></tab-ttsmark>
+  </mat-tab>
+
+  <mat-tab>
+    <ng-template mat-tab-label>
+      <mat-icon>history</mat-icon>
+      <span>History</span>
+    </ng-template>
+    <tab-history></tab-history>
+  </mat-tab>
+
+  <mat-tab>
+    <ng-template mat-tab-label>
+      <mat-icon>settings</mat-icon>
+      <span>Preferences</span>
+    </ng-template>
+    <tab-preferences></tab-preferences>
+  </mat-tab>
+
+</mat-tab-group>
