Create service to manage extension preferences using Chrome synced storage
Will help debugging to be able to selectively log messages to console
Abstracted service will allow for future preferences to be easily added

Bug: 193062584
Bug: 193436805
Bug: 193461337
Bug: 193461338
Change-Id: I229edfaf18413600c22b0e61e910e8d784405797

--- a/src/app/tab-preferences/tab-preferences.component.html
+++ b/src/app/tab-preferences/tab-preferences.component.html
@@ -12,3 +12,11 @@ limitations under the License.
 -->
 
 <h1>Preferences</h1>
+
+<h2>Extension Flags</h2>
+<mat-slide-toggle [checked]="preferencesDebugClient" (change)="onChangeDebugClient($event)">
+  Enable client-side logging
+</mat-slide-toggle>
+<mat-slide-toggle [checked]="preferencesDebugExtension" (change)="onChangeDebugExtension($event)">
+  Enable extension debug logging
+</mat-slide-toggle>
