Override outbound canvas methods to route to History tab
Bug: 193062584
Bug: 193436805
Bug: 193436790
Bug: 193461337
Bug: 193461341
Change-Id: I04168fbb387d3f49f3b98dff3fd8a2707e37ecc7

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 
-<mat-tab-group animationDuration="0ms" backgroundColor="primary">
+<mat-tab-group animationDuration="0ms" backgroundColor="primary" (selectedTabChange)="tabChanged($event)">
   <mat-tab>
     <ng-template mat-tab-label>
       <mat-icon>cloud_download</mat-icon>
@@ -19,7 +19,7 @@ limitations under the License.
     </ng-template>
     <tab-update></tab-update>
   </mat-tab>
-  
+
   <mat-tab>
     <ng-template mat-tab-label>
       <mat-icon>reviews</mat-icon>
