--- a/src/app/tab-ttsmark/tab-ttsmark.component.css
+++ b/src/app/tab-ttsmark/tab-ttsmark.component.css
@@ -14,9 +14,12 @@
  * limitations under the License.
  */
 
+button.example {
+  display: block;
+}
+
 textarea {
   font-family: monospace;
-  width: 90vw !important;
 }
 
 mat-chip {
