--- a/src/app/tab-update/tab-update.component.html
+++ b/src/app/tab-update/tab-update.component.html
@@ -12,3 +12,22 @@ limitations under the License.
 -->
 
 <h1>onUpdate</h1>
+
+<mat-form-field appearance="fill">
+  <mat-label>JSON Object</mat-label>
+  <textarea matInput [(ngModel)]="updateInput">
+  </textarea>
+</mat-form-field>
+
+<br>
+
+<button id="btn-import" mat-raised-button color="primary" (click)="run()">
+  <mat-icon aria-hidden="true">launch</mat-icon>
+  <span>Run</span>
+</button>
+
+<mat-chip-list>
+  <mat-chip class="example" mat-raised-button *ngFor="let example of payloads" (click)="prepopulate(example)">
+    {{ example }}
+  </mat-chip>
+</mat-chip-list>
