Add function to display example header on webpage
Inject HTML elements and CSS on page

Bug: 193062584
Bug: 193436805
Bug: 193436790
Bug: 193461337
Bug: 193461341
Change-Id: I4f9578d77872611e748abdea9c18b56bf9afc787

--- a/src/app/tab-preferences/tab-preferences.component.html
+++ b/src/app/tab-preferences/tab-preferences.component.html
@@ -13,6 +13,20 @@ limitations under the License.
 
 <h1>Preferences</h1>
 
+<!-- Project-level controls -->
+<button id="btn-header" mat-raised-button color="primary" (click)="showHeader()">
+  <mat-icon aria-hidden="true">video_label</mat-icon>
+  <span>Show Header</span>
+</button>
+<br>
+<span id="msg-remote" *ngIf="isRemoteTarget">
+  <!--
+    For remote debugging, these buttons will be disabled. (TODO)
+    Add a helpful message to the developer.
+  -->
+  These features are not available during remote debugging.
+</span>
+
 <h2>Extension Flags</h2>
 <mat-slide-toggle [checked]="preferencesDebugClient" (change)="onChangeDebugClient($event)">
   Enable client-side logging
