Add ability to read and process local directory to get suggestions
Bug: 193062584
Bug: 193436805
Bug: 193436790
Bug: 193461337
Bug: 193461341
Change-Id: I0475dc661de7f62305b6aa5dcb6e837397ccb7d3

--- a/src/app/tab-preferences/tab-preferences.component.html
+++ b/src/app/tab-preferences/tab-preferences.component.html
@@ -18,6 +18,11 @@ limitations under the License.
   <mat-icon aria-hidden="true">video_label</mat-icon>
   <span>Show Header</span>
 </button>
+
+<button id="btn-import" mat-raised-button color="primary" (click)="loadSdk()">
+  <mat-icon aria-hidden="true">folder_special</mat-icon>
+  <span>Import /sdk</span>
+</button>
 <br>
 <span id="msg-remote" *ngIf="isRemoteTarget">
   <!--
