Add handler for unsupported browser APIs in Interactive Canvas
Radio group selects whether there should be a warning or throw an error
By default nothing changes

Bug: 193062584
Bug: 193666517
Change-Id: I770eb76e98df7d2ed19c312142d5f72a5ccc7fd5

--- a/src/styles.css
+++ b/src/styles.css
@@ -68,4 +68,8 @@ h1 {
     --toggle-thumb-color: rgb(96, 125, 139); /* #607D8B */
     --label-unselected-text-color: rgba(255, 255, 255, 0.7);
   }
+
+  a:visited {
+    color: cyan;
+  }
 }
