--- a/src/app/tab-preferences/tab-preferences.component.html
+++ b/src/app/tab-preferences/tab-preferences.component.html
@@ -32,10 +32,24 @@ limitations under the License.
   These features are not available during remote debugging.
 </span>
 
-<h2>Extension Flags</h2>
+<!-- Global controls -->
+<h2>Extension Preferences</h2>
 <mat-slide-toggle [checked]="preferencesDebugClient" (change)="onChangeDebugClient($event)">
   Enable client-side logging
 </mat-slide-toggle>
+
 <mat-slide-toggle [checked]="preferencesDebugExtension" (change)="onChangeDebugExtension($event)">
   Enable extension debug logging
 </mat-slide-toggle>
+
+<span>Behavior for
+    <a href="https://developers.google.com/assistant/interactivecanvas/web-apps#guidelines_and_restrictions">
+      unavailable Interactive Canvas methods
+    </a>:
+</span>
+<br>
+<mat-radio-group aria-label="Unsupported API warning level" [value]="preferencesUnsupportedApi" (change)="onChangeUnsupportedApi($event)">
+  <mat-radio-button value="off">Ignore</mat-radio-button>
+  <mat-radio-button value="warn">Log Warning</mat-radio-button>
+  <mat-radio-button value="error">Throw Error</mat-radio-button>
+</mat-radio-group>
